--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
   google_fonts: ^4.0.0
   transparent_image: ^2.0.0
+  firebase_auth: ^4.2.5
+  firebase_core: ^2.4.1
+  cloud_firestore: ^4.3.1
+  get: ^4.6.5
+  image_picker: ^0.8.6+1
+  intl: ^0.17.0
+  
 
 dev_dependencies:
   flutter_test:
