--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   get: ^4.6.5
   image_picker: ^0.8.6+1
   intl: ^0.17.0
+  otp_text_field: ^1.1.3
+  flutter_secure_storage: ^7.0.1
   
 
 dev_dependencies:
