--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   intl: ^0.17.0
   otp_text_field: ^1.1.3
   flutter_secure_storage: ^7.0.1
+  firebase_phone_auth_handler: ^1.0.8
+  firebase_app_check: ^0.1.1+8
   
 
 dev_dependencies:
