--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_secure_storage: ^7.0.1
   firebase_phone_auth_handler: ^1.0.8
   firebase_app_check: ^0.1.1+8
+  google_nav_bar: ^5.0.6
   
 
 dev_dependencies:
